# cardinal-ai

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_SNAPSHOT.md  README.md  RECOMMENDATION-collective-intelligence-layer.md  ce-analytics-dashboard.jsx  ce-architecture-diagram.html  constraints.txt  docker-compose.yml
CE - Agent Builder/: .env.example  .gitignore  .mcp.json  README.md  evaluation-report.md  evaluation-v2-academic-report.md  evaluation-v2-double-blind.md  evaluation-v2-key.json  evaluation-v2-outputs.json  evaluation-v2-report.md  pyproject.toml
CE - Agent Builder/.github/workflows/: ci.yml
CE - Agent Builder/demo/: .env.example  .gitignore  DELIVERY.md  DEPLOYMENT.md  QUICK_START.txt  README.md  TESTING.md  app.py  demo_data.py  requirements.txt
CE - Agent Builder/demo/.streamlit/: config.toml
CE - Agent Builder/docs/: BYPASS_PERMISSIONS.md  architecture.md
CE - Agent Builder/exec-team-output/: CARDINAL-ELEMENT-90-DAY-PLAN.md  c-suite-agent-roster-plan.md  cfo-strategy.md  cmo-strategy.md  coo-strategy.md  cto-strategy.md
CE - Agent Builder/mcp_servers/github_intel_mcp/: pyproject.toml  server.py
CE - Agent Builder/mcp_servers/pricing_mcp/: pyproject.toml  server.py
CE - Agent Builder/mcp_servers/sec_edgar_mcp/: pyproject.toml  server.py
CE - Agent Builder/scripts/: import_to_notion.py  notion_databases.py  query_duckdb.py  sync_duckdb_to_postgres.py  test_bls_api.py  test_census_api.py  test_github_api.py  test_sec_edgar.py  upsert_dfw_knowledge.py
CE - Agent Builder/snapshots/: 2026-02-22-project-snapshot.md
CE - Agent Builder/src/csuite/: __init__.py  audit.py  config.py  debate.py  main.py  orchestrator.py  session.py
CE - Agent Builder/tests/: __init__.py  conftest.py  test_audit_formatter.py  test_base_agent.py  test_bls_api.py  test_census_api.py  test_constraints.py  test_cost_tracker.py  test_debate.py  test_dual_output.py  test_duckdb_store.py  test_evaluation.py  test_experience_log.py  test_feedback_loop.py  test_file_export.py  test_github_api.py  test_image_gen.py  test_memory_extractor.py  test_memory_store.py  test_notion_api.py  test_orchestrator.py  test_pinecone_kb.py  test_preferences.py  test_qa_tool.py  test_sdk_agent_learning.py  test_sec_edgar.py  test_session_models.py  test_tracing.py  test_web_search.py
CE - Evals/: .gitignore  CE-AGENTS Unified Assessment Rubric.xlsx  pyproject.toml
CE - Evals/.github/workflows/: test.yml
CE - Evals/assessments/: Code Quality Assessment.docx  Code Quality Assessment1.docx  Senior Developer Assessment v3.docx  Senior Developer Assessment v4.docx  Senior Developer Assessment v5 - Rebuttal.docx  Senior Developer Assessment v5.docx  Senior Developer Assessment v6.docx  Senior Developer Assessment v7.docx  Senior Developer Assessment.docx  Senior Developer Assessment2.docx
CE - Evals/examples/: regenerate_report.py  rerun_failed.py  run_protocol_eval.py
CE - Evals/protocols/: descriptions.yaml
CE - Evals/research/data/: eval_Q2.1_20260222_193755.json  eval_Q2.1_20260222_193832.json  eval_Q2.1_20260222_194040.json  eval_multi_model_5x5_20260222_202021.json  eval_multi_model_5x5_20260222_205701.json  (+2 more)
CE - Evals/rubrics/: protocol_quality.yaml  strategic_advisory.yaml
CE - Evals/snapshots/: project_snapshot_20260222.md
CE - Evals/tests/: test_blind.py  test_cost.py  test_judge_pipeline.py  test_models.py  test_report.py  test_rubric.py
ce-db/: alembic.ini  pyproject.toml
ce-db/alembic/: env.py
ce-db/src/ce_db/: engine.py  (+2 more)
ce-shared/: README.md  pyproject.toml
ce-shared/tests/: conftest.py  test_env.py  test_env_check.py  test_pricing.py
(+580 files in other folders)
