[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csuite"
version = "0.1.0"
description = "Elite C-Suite AI Advisors - Personal executive advisory team powered by Claude"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Scott Ewalt" }
]
dependencies = [
    "anthropic>=0.40.0",

    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=24.0.0",
    "httpx>=0.27.0",
    "duckdb>=1.0.0",
    "pinecone[grpc]>=5.0.0",
]

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[project.scripts]
csuite = "csuite.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/csuite"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/csuite/prompts/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = ["integration: real API calls"]

[tool.mypy]
python_version = "3.11"
# Core checks (not full strict -- tighten incrementally)
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true
# Disabled globally: union-attr (Anthropic SDK response blocks), no-any-return (tool modules)
disable_error_code = ["union-attr", "no-any-return"]

# Tool modules have dynamic dict returns and external API interop
[[tool.mypy.overrides]]
module = "csuite.tools.*"
disable_error_code = ["union-attr", "no-any-return", "attr-defined", "operator", "assignment", "dict-item", "arg-type", "misc", "import-untyped", "return-value", "call-arg"]

[[tool.mypy.overrides]]
module = ["claude_agent_sdk", "claude_agent_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "csuite.agents.sdk_agent"
disable_error_code = ["import-untyped"]
