[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ce-shared"
version = "0.1.0"
description = "Shared utilities for the CE-AGENTS monorepo"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "python-dotenv>=1.0.0",
    "rich>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ce_shared"]
